# herolight

./: main.py  pyproject.toml
ui/: __init__.py  mainwindow.ui  mainwindow_ui.py
