[tool.poetry]
name = "herolight"
version = "0.1.0"
description = ""
authors = ["Bilal Aslam <aslambilal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.6.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
